fixed issue on newsfeed overflowing; fixed issue on text on the splash page being black (specifically the lower 3 words)

--- a/client/src/components/Dashboard/Dashboard.css
+++ b/client/src/components/Dashboard/Dashboard.css
@@ -6,6 +6,7 @@
   background: #cfcfcf;
   box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.4);
   border-radius: 10px;
+  padding: 0 5px;
 }
 
 .list-overflow-container {
